docs/book/samples/appc/tabs_check.out
error[formatting]: tabs are not part of the canonical grammar; indent with spaces
  --> tabs_check.kso:1:1
   1 | 	print "hi"
       ^
